# solana-idl-extractor

./: Cargo.toml  README.md  afi-se.txt  afi-sf.txt  comp-comp.txt  test-plan.txt  test.json  token.json  token_program.json  vote_program.json
src/: errors.rs  lib.rs  main.rs
src/analyzer/: anchor.rs  bytecode.rs  known_programs.rs  mod.rs  patterns.rs  patterns_simplified.rs  tests.rs
src/analyzer/bytecode/: account_analyzer.rs  cfg.rs  disassembler.rs  discriminator_detection.rs  dynamic_analysis.rs  elf.rs  error_analyzer.rs  heuristics.rs  instruction_analyzer.rs  mod.rs  parser.rs  pattern.rs  string_analyzer.rs
src/analyzer/simulation/: mod.rs
src/cache/: mod.rs
src/constants/: anchor.rs  discriminator.rs  mod.rs  opcodes.rs  syscalls.rs
src/generator/: anchor.rs  custom.rs  mod.rs
src/models/: account.rs  idl.rs  instruction.rs  mod.rs  tests.rs  transaction_pattern.rs
src/monitor/: mod.rs  rpc.rs  tests.rs  transaction.rs
src/utils/: account_analysis.rs  anchor.rs  control_flow.rs  discriminator_detection.rs  dynamic_analysis.rs  error_analysis.rs  hash.rs  instruction_patterns.rs  memory_analysis.rs  mod.rs  pattern.rs  transaction_parser.rs
tests/: integration_test.rs
