[package]
name = "solana-idl-extractor"
version = "0.1.0"
edition = "2024"
description = "A tool to extract Interface Description Language (IDL) from Solana programs"
license = "MIT OR Apache-2.0"

[dependencies]
solana-sdk = "1.16.0"
solana-client = "1.16.0"
solana-program = "1.16.0"
solana-transaction-status = "1.16.0"
anchor-lang = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
bincode = "1.3.3"
log = "0.4"
env_logger = "0.10"
hex = "0.4"
borsh = "0.10"
