[package]
name = "solana-idl-extractor"
version = "0.1.0"
description = "A tool to extract Interface Description Language (IDL) from Solana programs through bytecode analysis and instruction parsing"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dvrvsimi/solana-idl-extractor"
documentation = "https://docs.rs/solana-idl-extractor"
readme = "README.md"
keywords = ["solana", "blockchain", "idl", "anchor", "bytecode"]
categories = ["command-line-utilities", "development-tools", "parser-implementations"]
edition = "2021"
rust-version = "1.75.0"  # Specify minimum supported Rust version

[dependencies]
# Core dependencies
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.3"
bs58 = "0.4"
base64 = "0.13"
dirs = "4.0"
tokio = { version = "1.0", features = ["full"] }
sha2 = "0.10.0"
thiserror = "1.0"
once_cell = "1.18.0"

# Low-level Solana dependencies
solana-account = "2.2.1"
solana-instruction = "2.2.1"
solana-pubkey = "2.2.1"
solana-transaction = "2.2.1"
solana-message = "2.2.1"
solana-transaction-status = "2.2.1"
solana-signature = "2.2.1"
solana-sdk-ids = "2.2.1"
solana-keypair = "2.2.1"
solana-signer = "2.2.1"
solana-hash = "2.2.1"


solana-client = "2.2.1"
# solana-program = "2.2.1"

# For RPC client
reqwest = { version = "0.11", features = ["json"] }

# For ELF parsing
goblin = "0.6"



[dev-dependencies]
solana-program-test = "2.2.6"
rand = "0.8"